checkout panel ui and fucntonality